<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".apps.menu.MenuActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFirstApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_app_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnImcApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_app_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/App3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/third_app_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/App4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/fourth_app_name" />

</LinearLayout>